# cpp-lib-tempalte

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md
include/: build.hpp  lib_template.hpp
source/: lib_template.cpp
test/: test.hpp  test_template.hpp
